<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rviz_h264_display</name>
  <version>0.1.0</version>
  <description>
    RViz2 display plugin for H.264 compressed images.
    Decodes H.264 CompressedImage using NVIDIA hardware decoder (nvv4l2decoder)
    and renders directly in RViz without intermediate Image topic publishing.
  </description>

  <maintainer email="todo@todo.com">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>rviz_ogre_vendor</depend>
  <depend>pluginlib</depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>libgstreamer1.0-dev</build_depend>
  <build_depend>libgstreamer-plugins-base1.0-dev</build_depend>

  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>gstreamer1.0-plugins-base</exec_depend>
  <exec_depend>gstreamer1.0-plugins-bad</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
